
o  New method: template <typename PartialFunction>
   void shuffle_dimensions(const PartialFunction&).
   TO BE CONTINUED

o  New function LinExpression& operator*=(LinExpression&, const Integer&)
   to multiply (in place) an expression by a scalar.

o  New function bool are_disjoint(const Polyhedron&, const Polyhedron&)
   returning true if and only if the two polyhedra are disjoint.

o  New methods void Polyhedron::BBRZ02_widening_assign(const Polyhedron&)
   and void Polyhedron::BBRZ02_limited_widening_assign(const Polyhedron&,
   ConSys&).  The BBRZ02 widening is a novel widening that is always more
   precise than the, by now standard, one we call H79.


Bugfixes
========

o  Any?


--------------------------------------------------------------------------
NEWS for version 0.4.2 (released on October 4, 2002)
--------------------------------------------------------------------------

Bugfixes
========

o  Fixed a bug in method Polyhedron::add_generator(const Generator&)
   whereby we were not adding the corresponding closure point when adding
   a point to an empty NNC polyhedron.

o  Fixed a bug in method GenSys::insert(const Generator&) whereby the
   insertion of a generator into an empty generator system might be
   mishandled.

o  Fixed a bug in method Polyhedron::operator<=(const Polyehdron&)
   whereby the lines of the polyhedron were handled improperly.

o  Fixed a bug in a private method used to implement public method
   Polyhedron::relation_with(const Generator& g),
   whereby a wrong result was obtained when `g' was a line.

o  Fixed a bug in methods Polyhedron::affine_image() and
   Polyhedron::affine_preimage(), whereby a wrong result could be
   obtained when using a negative denominator for the affine expression.

o  Fixed a bug in methods Polyhedron::minimized_constraints() and
   Polyhedron::minimized_generators(), whereby a library invariant
   was violated when calling these methods on a zero-dimensional space
   universe NNC polyhedron.

