@@ -50,7 +50,9 @@ site: http://www.cs.unipr.it/ppl/ . */
 	ppl_Polyhedron_get_generators/2,
 	ppl_Polyhedron_get_minimized_generators/2,
 	ppl_Polyhedron_add_constraint/2,
+	ppl_Polyhedron_add_constraint_and_minimize/2,
 	ppl_Polyhedron_add_generator/2,
+	ppl_Polyhedron_add_generator_and_minimize/2,
 	ppl_Polyhedron_add_constraints/2,
 	ppl_Polyhedron_add_constraints_and_minimize/2,
 	ppl_Polyhedron_add_generators/2,
@@ -277,7 +279,9 @@ site: http://www.cs.unipr.it/ppl/ . */
 	ppl_Polyhedron_get_generators/2,
 	ppl_Polyhedron_get_minimized_generators/2,
 	ppl_Polyhedron_add_constraint/2,
+	ppl_Polyhedron_add_constraint_and_minimize/2,
 	ppl_Polyhedron_add_generator/2,
+	ppl_Polyhedron_add_generator_and_minimize/2,
 	ppl_Polyhedron_add_constraints/2,
 	ppl_Polyhedron_add_constraints_and_minimize/2,
 	ppl_Polyhedron_add_generators/2,
