@@ -349,7 +349,9 @@ static PL_extension predicates[] = {
   PL_EXTENSION_ENTRY(ppl_Polyhedron_get_generators, 2)
   PL_EXTENSION_ENTRY(ppl_Polyhedron_get_minimized_generators, 2)
   PL_EXTENSION_ENTRY(ppl_Polyhedron_add_constraint, 2)
+  PL_EXTENSION_ENTRY(ppl_Polyhedron_add_constraint_and_minimize, 2)
   PL_EXTENSION_ENTRY(ppl_Polyhedron_add_generator, 2)
+  PL_EXTENSION_ENTRY(ppl_Polyhedron_add_generator_and_minimize, 2)
   PL_EXTENSION_ENTRY(ppl_Polyhedron_add_constraints, 2)
   PL_EXTENSION_ENTRY(ppl_Polyhedron_add_constraints_and_minimize, 2)
   PL_EXTENSION_ENTRY(ppl_Polyhedron_add_generators, 2)
