@@ -26,7 +26,9 @@
 	ppl_Polyhedron_get_generators/2,
 	ppl_Polyhedron_get_minimized_generators/2,
 	ppl_Polyhedron_add_constraint/2,
+	ppl_Polyhedron_add_constraint_and_minimize/2,
 	ppl_Polyhedron_add_generator/2,
+	ppl_Polyhedron_add_generator_and_minimize/2,
 	ppl_Polyhedron_add_constraints/2,
 	ppl_Polyhedron_add_constraints_and_minimize/2,
 	ppl_Polyhedron_add_generators/2,
