@@ -401,7 +401,9 @@ Integer_to_integer_term(const PPL::Integer& n) {
 #define ppl_Polyhedron_get_generators xsb_stub_ppl_Polyhedron_get_generators
 #define ppl_Polyhedron_get_minimized_generators xsb_stub_ppl_Polyhedron_get_minimized_generators
 #define ppl_Polyhedron_add_constraint xsb_stub_ppl_Polyhedron_add_constraint
+#define ppl_Polyhedron_add_constraint_and_minimize xsb_stub_ppl_Polyhedron_add_constraint_and_minimize
 #define ppl_Polyhedron_add_generator xsb_stub_ppl_Polyhedron_add_generator
+#define ppl_Polyhedron_add_generator_and_minimize xsb_stub_ppl_Polyhedron_add_generator_and_minimize
 #define ppl_Polyhedron_add_constraints xsb_stub_ppl_Polyhedron_add_constraints
 #define ppl_Polyhedron_add_constraints_and_minimize xsb_stub_ppl_Polyhedron_add_constraints_and_minimize
 #define ppl_Polyhedron_add_generators xsb_stub_ppl_Polyhedron_add_generators
@@ -455,7 +457,9 @@ Integer_to_integer_term(const PPL::Integer& n) {
 #undef ppl_Polyhedron_get_generators
 #undef ppl_Polyhedron_get_minimized_generators
 #undef ppl_Polyhedron_add_constraint
+#undef ppl_Polyhedron_add_constraint_and_minimize
 #undef ppl_Polyhedron_add_generator
+#undef ppl_Polyhedron_add_generator_and_minimize
 #undef ppl_Polyhedron_add_constraints
 #undef ppl_Polyhedron_add_constraints_and_minimize
 #undef ppl_Polyhedron_add_generators
@@ -547,7 +551,9 @@ XSB_ENTRY_2(ppl_Polyhedron_get_minimized_constraints)
 XSB_ENTRY_2(ppl_Polyhedron_get_generators)
 XSB_ENTRY_2(ppl_Polyhedron_get_minimized_generators)
 XSB_ENTRY_2(ppl_Polyhedron_add_constraint)
+XSB_ENTRY_2(ppl_Polyhedron_add_constraint_and_minimize)
 XSB_ENTRY_2(ppl_Polyhedron_add_generator)
+XSB_ENTRY_2(ppl_Polyhedron_add_generator_and_minimize)
 XSB_ENTRY_2(ppl_Polyhedron_add_constraints)
 XSB_ENTRY_2(ppl_Polyhedron_add_constraints_and_minimize)
 XSB_ENTRY_2(ppl_Polyhedron_add_generators)
